Fix some more roles stuff

--- a/html/changelog.html
+++ b/html/changelog.html
@@ -689,7 +689,7 @@
 			</ul>
 			<h3 class="author">Herigony updated:</h3>
 			<ul class="changes bgimages16">
-				<li class="bugfix">Fixed admin jobban panel</li>
+				<li class="bugfix">Fixed admin roleban panel</li>
 			</ul>
 			<h3 class="author">Textor updated:</h3>
 			<ul class="changes bgimages16">
